added camera movement

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             data-position="0.0019166552880173723m 0.08056323576845559m 0.17811011982434743m"
             data-normal="0.017153521406962975m 0.9793341569608276m 0.2015201372398452m"
             data-visibility-attribute="visible"
+            data-orbit="40.142746deg 38.967deg 4.179899m"
             
             >
             <div class="HotspotAnnotation">
@@ -42,7 +43,9 @@
             slot="hotspot-2"
             data-position="-0.008016338339270845m 0.10288349685665749m 0.02644326144055742m"
             data-normal="-0.03213140306704411m 0.8580317933732635m 0.512590493959461m"
-            data-visibility-attribute="visible">
+            data-visibility-attribute="visible"
+            data-orbit="-40.142746deg 68.967deg 4.179899m"
+            >
             <div class="HotspotAnnotation">Sklo</div>
         </button>
         <button 
@@ -51,7 +54,9 @@
             slot="hotspot-3"
             data-position="-0.09115282916315004m 0.030583486625633538m -0.13374070930198068m"
             data-normal="-0.07512246588998932m 0.4419155597285031m 0.8939056176064961m"
-            data-visibility-attribute="visible">
+            data-visibility-attribute="visible"
+            data-orbit="-90.142746deg 68.967deg 4.179899m"
+            >
             <div class="HotspotAnnotation">Kolo</div>
         </button>
             <div class="progress-bar hide" slot="progress-bar">
