--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         src="./src/MercedesBenz_GTR.glb"
         ios-src="./src/spider.usdz"
         ar
+        ar-modes="webxr scene-viewer quick-look"
         shadow-intensity="1"
         camera-controls
         touch-action="pan-y"
