--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         id="auto"
         alt="Neil Armstrong's Spacesuit from the Smithsonian Digitization Programs Office and National Air and Space Museum"
         src="./src/RobotExpressive.glb"
-        ios-src="./src/spider.usdz"
+        ios-src="./src/Cosmonaut.reality"
         autoplay
         ar
         ar-modes="webxr scene-viewer quick-look"
