--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         id="auto"
         alt="Neil Armstrir and Space Museum"
         src="./src/RobotExpressive.glb"
-        ios-src="./src/RobotExpressive.usdz"
+        ios-src="./src/astro.reality"
         autoplay
         animation-name="Idle"
         ar
