--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <model-viewer
         id="auto"
         alt="Neil Armstrir and Space Museum"
-        src="./src/astroQr.glb"
-        ios-src="./src/astro.reality"
+        src="./src/RobotExpressive.glb"
+        ios-src="./src/astroQr.reality"
         autoplay
         animation-name="Idle"
         ar
