--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <model-viewer
         id="auto"
         alt="Neil Armstrir and Space Museum"
-        src="./src/RobotExpressive.glb"
+        src="./src/Seal.glb"
         ios-src="./src/astroQr.reality"
         autoplay
         animation-name="Idle"
