--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         src="./src/Seal.glb"
         ios-src="./src/astroQr.reality"
         autoplay
-        animation-name="Idle"
+        animation-name="animation_0"
         ar
         ar-modes="webxr scene-viewer quick-look"
         shadow-intensity="1"
@@ -32,17 +32,10 @@
         <div class="HotspotAnnotation">Wave</div>
     </button>
         </button>
-        <button 
-            onclick="hotspotClickOne(this)"
-            class="Hotspot"
-            slot="hotspot-2"
-            data-surface="9 0 271 270 273 0.719 0.062 0.219" data-visibility-attribute="visible">
-        <div class="HotspotAnnotation">Dance</div>
-    </button> 
     <button 
             onclick="hotspotClickOne(this)"
             class="Hotspot"
-            slot="hotspot-3"
+            slot="hotspot-2"
             data-surface="1 0 271 270 273 0.719 0.062 0.219" data-visibility-attribute="visible">
         <div class="HotspotAnnotation">Stop</div>
     </button>
