--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <model-viewer
         id="auto"
         alt="Neil Armstrir and Space Museum"
-        src="./src/Seal.glb"
+        src="./src/kabuum.gltf"
         ios-src="./src/astroQr.reality"
-        autoplay
-        animation-name="animation_0"
+        animation-name="Kabbum.001Action"
+        
         ar
         ar-modes="webxr scene-viewer quick-look"
         shadow-intensity="1"
