--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         src="./src/kabuum.gltf"
         ios-src="./src/astroQr.reality"
         animation-name="Kabbum.001Action"
-        
+        autoplay
         ar
         ar-modes="webxr scene-viewer quick-look"
         shadow-intensity="1"
