--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <model-viewer
         id="auto"
         alt="Neil Armstrir and Space Museum"
-        src="./src/kabuum.gltf"
+        src="./src/Seal.gltf"
         ios-src="./src/astroQr.reality"
         animation-name="Kabbum.001Action"
         autoplay
