--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
         id="auto"
         alt="Neil Armstrir and Space Museum"
         src="./src/Seal.gltf"
-        ios-src="./src/astroQr.reality"
+        ios-src="./src/Cosmonaut.reality"
         animation-name="Kabbum.001Action"
-        autoplay
         ar
         ar-modes="webxr scene-viewer quick-look"
         shadow-intensity="1"
@@ -28,8 +27,7 @@
             class="Hotspot"
             slot="hotspot-1"
             data-surface="0 0 7200 7202 7203 0.506 0.149 0.345" data-visibility-attribute="visible">
-        <div class="HotspotAnnotation">Wave</div>
-    </button>
+        <div class="HotspotAnnotation">Play</div>
         </button>
         
             <div class="progress-bar hide" slot="progress-bar">
