--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
             slot="hotspot-1"
             data-visibility-attribute="visible">Play
         </button>
+        <button onclick="hotspotClickOne(this)"
+            class="Hotspot-Btn"
+            slot="hotspot-2"
+            data-visibility-attribute="visible">Stop
+        </button>
         </div>
         
         
