--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         id="auto"
         alt="Neil Armstrir and Space Museum"
         src="./src/seal.gltf"
-        ios-src="./src/SealWithTextures.usdz"
+        ios-src="./src/Seal.reality"
         animation-name="Kabbum.001Action"
         ar
         ar-modes="webxr scene-viewer quick-look"
