--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div>
         <model-viewer
         id="auto"
-        alt="Neil Armstrir and Space Museum"
+        alt="Seal"
         src="./src/seal.gltf"
-        ios-src="./src/Seal4.reality"
+        ios-src="./src/iosSeal.reality"
         animation-name="Kabbum.001Action"
         ar
         ar-modes="webxr scene-viewer quick-look"
