--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
         <model-viewer
         id="auto"
         alt="Seal"
-        src="./src/seal.gltf"
+        src="./src/Monk-Fu-running.gltf"
         ios-src="./src/iosSeal.reality"
-        animation-name="Kabbum.001Action"
+        animation-name="54_14_baked"
+        autoplay
         ar
         ar-modes="webxr scene-viewer quick-look"
         shadow-intensity="1"
@@ -30,7 +31,7 @@
         <div class="HotspotAnnotation">Play</div>
         </button> -->
 
-        <div class="btns">
+        <!-- <div class="btns">
             <button onclick="hotspotClickOne(this)"
             class="Hotspot-Btn"
             slot="hotspot-1"
@@ -41,7 +42,7 @@
             slot="hotspot-2"
             data-visibility-attribute="visible">Stop
         </button>
-        </div>
+        </div> -->
         
         
             <div class="progress-bar hide" slot="progress-bar">
