--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <model-viewer
         id="auto"
         alt="Seal"
-        src="./src/Monk-Fu-running.gltf"
+        src="./src/Monk-Fu_anims.gltf"
         ios-src="./src/iosSeal.reality"
         animation-name="54_14_baked"
         autoplay
@@ -31,18 +31,18 @@
         <div class="HotspotAnnotation">Play</div>
         </button> -->
 
-        <!-- <div class="btns">
+        <div class="btns">
             <button onclick="hotspotClickOne(this)"
             class="Hotspot-Btn"
             slot="hotspot-1"
-            data-visibility-attribute="visible">Play
+            data-visibility-attribute="visible">Run
         </button>
         <button onclick="hotspotClickOne(this)"
             class="Hotspot-Btn"
             slot="hotspot-2"
-            data-visibility-attribute="visible">Stop
+            data-visibility-attribute="visible">Backflip
         </button>
-        </div> -->
+        </div>
         
         
             <div class="progress-bar hide" slot="progress-bar">
