--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         id="auto"
         alt="Seal"
         src="./src/Monk-Fu_anims.gltf"
-        ios-src="./src/Monk-Fu-1.reality"
+        ios-src="./src/Monk-Fu-moc.reality"
         animation-name="54_14_baked"
         autoplay
         ar
