--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <model-viewer
         id="auto"
         alt="Seal"
-        src="./src/Monk-Fu_anims.gltf"
+        src="./src/Monk-Fu_anims.glb"
         ios-src="./src/Monk-Fu-moc.reality"
         animation-name="54_14_baked"
         autoplay
