--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 <body>
     <div>
+        <a rel="ar" href="src/iosSeal.reality" >
+            <div>Robotiak</div>
+        </a>
+    </div>
+    <div>
         <model-viewer
         id="auto"
         alt="Seal"
