--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     
 </head>
 <body>
-    <div>
+    <!-- <div>
         <a rel="ar" href="src/iosSeal.reality" >
             <div>Robotiak</div>
         </a>
-    </div>
+    </div> -->
     <div>
         <model-viewer
         id="auto"
