--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
         camera-controls
         touch-action="pan-y"
         >
-        
+        <div class="progress-bar" slot="progress-bar">
+            <div class="update-bar"></div>
+        </div>
         <!-- <button onclick="hotspotClickOne(this)"
             class="Hotspot"
             slot="hotspot-1"
