--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         id="auto"
         alt="Seal"
         src="./src/Monk-Fu_anims.glb"
-        ios-src="./src/MonkFu-final-v2.reality"
+        ios-src="./src/Monk-Fu-1.reality"
         animation-name="54_14_baked"
         autoplay
         ar
