--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         autoplay
         ar
         ar-modes="webxr scene-viewer quick-look"
+        poster="./src/poster.png"
         shadow-intensity="1"
         camera-controls
         touch-action="pan-y"
