--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         ar
         ar-modes="webxr scene-viewer quick-look"
         poster="./src/poster.png"
+        exposure="1.2"
         shadow-intensity="1"
         camera-controls
         touch-action="pan-y"
